--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 * {
     padding:0;
     margin:0;
-    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 
     --gray:rgb(42, 42, 42);
@@ -10,7 +9,9 @@
 
     scroll-behavior: smooth;
 }
-
+p {
+    font-family: 'Poppins', sans-serif;
+}
 .body {
     background-color:white;
 }
@@ -34,19 +35,6 @@
     height:3px;
     background-color:rgb(154, 210, 255);
     border-radius:25px;
-}
-
-.title-4 {
-    font-size:55px;
-}
-.title-3 {
-    font-size:45px;
-}
-.title-2 {
-    font-size:35px;
-}
-.title-1 {
-    font-size:20px;
 }
 
 .p {
@@ -547,7 +535,7 @@
 
 .inriktningar {
     width:100%;
-    height:75vh;
+    height:110vh;
     display:flex;
     justify-content: center;
     align-items:center;
