--- a/css/style.css
+++ b/css/style.css
@@ -684,6 +684,7 @@ p {
     align-self: center;
     top:calc(50% - 25px);
     left:calc(90% - 25px);
+    cursor:pointer;
 }
 
 .arrow-left {
@@ -694,8 +695,10 @@ p {
 
     top:calc(50% - 25px);
     left:calc(10% - 25px);
-    
+    cursor:pointer;
+    transition:all .4s ease-in-out;
 }
+
     .arrow-l {
         background-color:white;
         width:100%;
@@ -724,5 +727,13 @@ p {
         }
     }
 
+
+/* */
+/* Inrik Img */
+
+.inrik-img {
+    width:100%;
+    height:75vh;
+}
 
 /* */
