--- a/css/style.css
+++ b/css/style.css
@@ -801,5 +801,8 @@ p {
     width:100%;
     height:100%;
     position: relative;
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
 }
 
